--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "untitled7",
+  "homepage": "https://yls-com.github.io/first-vue",
   "version": "0.0.0",
   "private": true,
   "type": "module",
