--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "gh-pages": "^6.3.0",
+    "rimraf": "^6.1.2",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
