--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "untitled7",
-  "homepage": "https://yls-com.github.io/first-vue",
+  "homepage": "https://yls-com.github.io/first-vue/",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "rimraf dist && npm run build && gh-pages -d dist -f"
+    "deploy": "npm run build -- --mode production && gh-pages -d dist -f"
   },
   "dependencies": {
     "axios": "^1.13.2",
