--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build -- --mode production && gh-pages -d dist -f"
+    "deploy": "npm run build && gh-pages -d dist -f"
   },
   "dependencies": {
     "axios": "^1.13.2",
